added overflow-y : scroll

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                     <div class="form-group">
                         <input type="text" class="form-control search-bar" name="artist"
                             placeholder="Song, Artist, Album" />
-                        <button type="submit" class="btn search-bar" id="get-music-button">Get
+                        <button type="submit" class="btn search-bar-submit" id="get-music-button">Get
                             Music</button>
                     </div>
                 </form>
