--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
                             Music</button>
                     </div>
                 </form>
+                <audio controls autoplay class="audio-bar mt-3" id="playAudio" src="" type="audio/ogg"></audio>
             </div>
         </section>
     </header>
