got it to play and pause when you click on the album art

--- a/index.html
+++ b/index.html
@@ -29,7 +29,10 @@
                             Music</button>
                     </div>
                 </form>
-                <audio controls autoplay class="audio-bar mt-3" id="playAudio" src="" type="audio/ogg"></audio>
+                <audio id="playAudio" autoplay src="" preload="auto">
+                </audio>
+
+
             </div>
         </section>
     </header>
