--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <header class="container-fluid">
         <section class="row">
             <div class="col d-flex flex-column align-items-center justify-content-center search-photo">
-                <h1 class="title pb-4">Songster</h1>
+                <h1 class="title">Songster</h1>
                 <form class="form-inline" onsubmit="app.controllers.itunesCtrl.getMusic(event)">
                     <!--DO NOT MODIFY THE ID OR ONCLICK ATTRIBUTES IN THIS FORM-->
                     <div class="form-group">
@@ -39,7 +39,9 @@
 
     <main class="container">
         <sections class="row" id="songs">
-
+            <div class="col d-flex justify-content-center align-items-center">
+                <h1 class="results">YOUR RESULTS HERE</h1>
+            </div>
         </sections>
     </main>
 
