added pointer on hover over album art

--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
                             Music</button>
                     </div>
                 </form>
+                <h4 class="tip pt-5 results">Click on the album art to play/pause a sample</h4>
                 <audio id="playAudio" autoplay src="" preload="auto">
                 </audio>
 
